feat: add route auth restriction
